local databases can now be renamed

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -294,8 +294,8 @@ NavigationView_NewCategoryDialogText=Please enter the name of the new category:
 NavigationView_NewCategoryDialogTitle=New category
 NavigationView_NoButton=No
 NavigationView_RemoveCategoryText=Remove
-NavigationView_RenameCategoryDialogText=Please enter new category name:
-NavigationView_RenameCategoryText=Rename
+PleaseEnterNewName=Please enter a new name
+Rename=Rename
 NavigationView_YesAllButton=Yes, all
 NavigationView_YesButton=Yes
 Never=Never
