--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -292,8 +292,8 @@ NavigationView_NewCategoryDialogText=Bitte geben sie den Namen der neuen Kategor
 NavigationView_NewCategoryDialogTitle=Neue Kategorie
 NavigationView_NoButton=Nein
 NavigationView_RemoveCategoryText=L\u00F6schen
-NavigationView_RenameCategoryDialogText=Bitte geben sie den neuen Namen ein
-NavigationView_RenameCategoryText=Umbenennen
+PleaseEnterNewName=Bitte geben Sie einen neuen Namen ein
+Rename=Umbenennen
 NavigationView_YesAllButton=Ja, alle
 NavigationView_YesButton=Ja
 Never=niemals
