added external files for sources

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -156,6 +156,7 @@ ExportToExcel=Export to Excel
 ExportDatabase=Export database
 Factor=Factor
 FancyToolTip_NoDescription=No description
+File=File
 FileAlreadyExists=File already exists
 FileImportPage_ChooseDirectoryButton=Choose directory...
 FileImportPage_ChooseDirectoryLabel=From directory:
