--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -154,6 +154,7 @@ ExportToExcel=Export nach Excel
 ExportDatabase=Exportiere Datenbank
 Factor=Faktor
 FancyToolTip_NoDescription=Keine Beschreibung
+File=Datei
 FileAlreadyExists=Die Datei existiert bereits
 FileImportPage_ChooseDirectoryButton=Verzeichnis ausw\u00E4hlen...
 FileImportPage_ChooseDirectoryLabel=Aus Verzeichnis\:
