formulas for LCIA factors done

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -179,7 +179,6 @@ Flows_WizardMessage=Creates a new flow
 Flows_WizardTitle=New flow
 Formula=Formula
 FormulaTitle=Formula
-FormulaViewMode=Formula view
 French=French
 FunctionalUnit=Functional unit
 GeneralInformation=General information
@@ -462,7 +461,8 @@ SelectParameter=Select the parameter you want to refer to
 SettingUp=Setting up
 Settings=Settings
 ShowAs=Show as {0}
-ShowValues=Show values on bars
+ShowFormulas=Show formulas
+ShowValues=Show values
 Simulation_NumberOfSimulations=Number of simulations
 SingleAmount=Single amount
 SingleScore=SingleScore
@@ -582,7 +582,6 @@ UsageOf=Usage of
 UsedInProcesses=Used in processes
 Username=User
 Value=Value
-ValueViewMode=Value view
 Version=Version
 Warning=Warning
 WasteFlow=Waste
