--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -177,7 +177,6 @@ Flows_WizardMessage=Erstellt einen neuen Fluss
 Flows_WizardTitle=Neuer Fluss
 Formula=Formel
 FormulaTitle=Formel
-FormulaViewMode=Formelansicht
 French=Franz\u00F6sisch
 FunctionalUnit=Funktionale Einheit
 GeneralInformation=Allgemeine Informationen
@@ -460,7 +459,8 @@ SelectParameter=W\u00E4hlen Sie den Parameter auf den Sie sich beziehen wollen
 SettingUp=Richte Exporter ein
 Settings=Einstellungen
 ShowAs=Zeige als {0}
-ShowValues=Werte auf Balken anzeigen
+ShowFormulas=Formeln anzeigen
+ShowValues=Werte anzeigen
 Simulation_NumberOfSimulations=Anzahl von Simulationen
 SingleAmount=Einzelbeitrag
 SingleScore=SingleScore
@@ -580,7 +580,6 @@ UsageOf=Verwendung von
 UsedInProcesses=Wird in Prozessen verwendet
 Username=Benutzername
 Value=Wert
-ValueViewMode=Werteansicht
 Version=Version
 Warning=Warnung
 WasteFlow=Abfall
