display of LCIA parameters in parameter redefinition tables

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -71,6 +71,7 @@ CompleteRefData=Complete reference data
 Connect=Connect...
 Connecting=Connecting to
 ConsumedBy=Consumed by
+Context=Context
 Contribution=Contribution
 ConversionFactor=Conversion factor
 Copy=Copy
