--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -595,3 +595,4 @@ Year=Jahr
 ZipCode=PLZ
 DatabaseImport=Datenbankimport
 DatabaseImportDescription=Importiert Daten aus einer bestehenden Datenbank in die aktive Datenbank
+Context=Kontext
