Added 'Show outline' action to context menu in graphical editor

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -539,6 +539,7 @@ Systems_SelectPossibleProcessesDialog_Exists=Already present
 Systems_SelectPossibleProcessesDialog_IsConnected=Already connected
 Systems_SelectPossibleProcessesDialog_SelectProviders=Select providers
 Systems_SelectPossibleProcessesDialog_SelectRecipients=Select recipients
+Systems_ShowOutlineAction_Text=Show outline
 Systems_UnmarkProcess=Unmark
 Systems_UseSystemProcesses=Connect with system processes if possible
 Systems_WizardMessage=Creates a new product system
