--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -542,6 +542,7 @@ Systems_WizardMessage=Erstellt ein neues Produktsystem
 Systems_WizardTitle=Neues Produktsystem
 Systems_XYLayoutCommand_MoveText=Bewegen
 Systems_XYLayoutCommand_ResizeText=Gr\u00F6\u00DFe \u00E4ndern
+Systems_ShowOutlineAction_Text=Gliederung anzeigen
 Table=Tabelle
 TargetAmount=Referenzmenge
 TechnologyInfoSectionLabel=Technologie
