- Added parameters component - Enabled components template loading

--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -386,6 +386,7 @@ PropertiesView=Eigenschaftensicht
 ProviderOutput=Provideroutput
 Publication=Publikation
 QuantitativeReference=Quantitative Referenz
+Readable=Readable
 RecipientInput=Empf\u00E4ngerinput
 ReferenceExchange=Referenzproduct
 ReferenceFlowProperty=Referenzflusseigenschaft
@@ -404,6 +405,8 @@ RemoveParameterText=Entferne ausgew\u00E4hlte Parameter
 RemoveProductSystemText=Entferne ausgew\u00E4hltes Produktsystem
 RemoveSourceText=Enfterne ausgew\u00E4hlte Quelle
 RemoveUnitText=Entferne ausgew\u00E4hlte Einheit
+Report=Report
+ReportParameters=Report parameters
 Reserve=Reserviere folgende Menge Arbeitsspeicher f\u00FCr openLCA
 Reserved={0} ist ein reserviertes Wort und kann nicht benutzt werden.
 Reset=Zur\u00FCcksetzen
@@ -578,6 +581,7 @@ UpdatePreferences=Einstellungen für die Aktualisierung
 Usage=Verwendung
 UsageOf=Verwendung von
 UsedInProcesses=Wird in Prozessen verwendet
+UserFriendlyName=User friendly name
 Username=Benutzername
 Value=Wert
 Version=Version
