--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -390,6 +390,7 @@ PropertiesView=Vista de propiedades
 ProviderOutput=Salida proveedor
 Publication=Publicaci\u00f3n
 QuantitativeReference=Referencia cuantitativa
+Readable=Readable
 RecipientInput=Entrada de destinatario
 ReferenceExchange=Producto de referencia
 ReferenceFlowProperty=Propiedad de flujo de referencia
@@ -408,6 +409,8 @@ RemoveParameterText=Suprimir par\u00e1metros seleccionados
 RemoveProductSystemText=Suprimir sistema de producto seleccionado
 RemoveSourceText=Suprimir fuente seleccionada
 RemoveUnitText=Suprimir unidad seleccionada
+Report=Report
+ReportParameters=Report parameters
 Reserve=Reservar la siguiente cantidad de memoria para openLCA
 Reserved={0} es una palabra reservada y no se puede utilizar
 Reset=Reajustar
@@ -581,6 +584,7 @@ UpdatePreferences=Actualizar preferencias
 Usage=Uso
 UsageOf=Uso de
 UsedInProcesses=Usado en procesos
+UserFriendlyName=User friendly name
 Username=Usuario
 Value=Valor
 ValueViewMode=Vista de valor
