--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -407,6 +407,8 @@ RemoveParameterText=Remove selected parameters
 RemoveProductSystemText=Remove selected product system
 RemoveSourceText=Remove selected source
 RemoveUnitText=Remove selected unit
+Report=Report
+ReportParameters=Report parameters
 Reserve=Reserve the following amount of memory for openLCA
 Reserved={0} is a reserved word and can not be used.
 Reset=Reset
@@ -581,6 +583,7 @@ UpdatePreferences=Update preferences
 Usage=Usage
 UsageOf=Usage of
 UsedInProcesses=Used in processes
+UserFriendlyName=User friendly name
 Username=User
 Value=Value
 Version=Version
