ILCD export for LCIA methods added

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -32,6 +32,8 @@ wizard.name.6 = Unit groups
 wizard.description.6 = Export unit groups to ILCD xml files
 wizard.name.7 = Product systems
 wizard.description.7 = Export product systems to ILCD xml files
+wizard.name.8 = LCIA methods
+wizard.description.8 = Export LCIA methods to ILCD xml files
 
 # category labels
 category.name = EcoSpold1
