--- a/olca-app/OSGI-INF/l10n/bundle_de.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_de.properties
@@ -7,7 +7,7 @@ page.name.3=Einstellungen f\u00FCr Berechnungsmethoden
 page.name.2=Regionen
 page.name.1=Globale Parameter
 page.name.0=Parametereinstellungen
-property.value=property.value \= Copyright (c) 2007-2013 GreenDelta. All rights reserved. This program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http\://www.openlca.org/uploads/media/MPL-1.1.html Contributors\: GreenDelta - initial API and implementation  www.greendelta.com tel.\: +49 30 4849 6030 mail\: gdtc@greendelta.com
+property.value=property.value \= Copyright (c) 2007-2014 GreenDelta. All rights reserved. This program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http\://www.openlca.org/uploads/media/MPL-1.1.html Contributors\: GreenDelta - initial API and implementation  www.greendelta.com tel.\: +49 30 4849 6030 mail\: gdtc@greendelta.com
 perspective.name=Perspektive
 commonFilter.name.4=Systemprozesse
 navigatorContent.name=Datenprovider
@@ -31,7 +31,7 @@ updatecheck.commandlabel = Nach Updates suchen
 updatecheck.commandmnemonic = U
 update.preference.page.name = Aktualisierungen
 
-introTitle = Willkommen in openLCA!
+introTitle = Willkommen!
 
 #model category labels
 model.category.name.0=Fl\u00FCsse
@@ -50,14 +50,14 @@ wizard.name.1=Wirkungsmethoden
 wizard.name.0=Prozesse
 wizard.name=EcoSpold
 Sources=Quellen
-wizard.description.7=Exportiere Produktsysteme in ILCD xml Dateien
-wizard.description.6=Exportiere Einheitengruppen in ILCD xml Dateien
-wizard.description.5=Exportiere Flusseigenschaften in ILCD xml Dateien
-wizard.description.4=Exportiere Fl\u00FCsse in ILCD xml Dateien
-wizard.description.3=Exportiere Prozesse in ILCD xml Dateien
+wizard.description.7=Exportiere Produktsysteme im ILCD-Format
+wizard.description.6=Exportiere Einheitengruppen im ILCD-Format
+wizard.description.5=Exportiere Flusseigenschaften im ILCD-Format
+wizard.description.4=Exportiere Fl\u00FCsse im ILCD-Format
+wizard.description.3=Exportiere Prozesse im ILCD-Format
 wizard.description.2=Importiere eine Zip-Datei die ILCD xml-Dateien enth\u00E4lt
-wizard.description.1=Exportiere Wirkungsmethoden in EcoSpold1 xml Dateien
-wizard.description.0=Exportiere Prozesse in EcoSpold1 xml Dateien
+wizard.description.1=Exportiere LCIA-Methoden im EcoSpold1-Format
+wizard.description.0=Exportiere Prozesse im EcoSpold1-Format
 Actors=Personen
 ilcd.import.description=Importiert ILCD Datens\u00E4tze aus einem ILCD Packet
 category.name=EcoSpold1
@@ -68,6 +68,10 @@ wizard.name.5=Flusseigenschaften
 wizard.name.4=Fl\u00FCsse
 wizard.name.3=Prozesse
 wizard.name.2=ILCD
+
+wizard.name.8 = LCIA Methoden
+wizard.description.8 = Exportiere LCIA-Methoden im ILCD-Format
+
 
 #Properties for org.openlca.ilcd.network
 ilcd.net.import.category.name = ILCD Netzwerk-Import
