Externalized new strings in 'build supply chain' menu

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -67,6 +67,7 @@ City=City
 Code=Code
 Comment=Comment
 CompareProductSystemsForMethod=Compare product systems for impact method {0}
+Complete=Complete
 CompleteRefData=Complete reference data
 Connect=Connect...
 Connecting=Connecting to
@@ -299,6 +300,7 @@ PleaseEnterNewName=Please enter a new name
 Rename=Rename
 NavigationView_YesAllButton=Yes, all
 NavigationView_YesButton=Yes
+NextTier=Next tier
 Never=Never
 NewCategoryDialogDefault=new category
 NewCategoryDialogText=Please enter the name of the new category:
