--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -67,6 +67,7 @@ City=Stadt
 Code=Code
 Comment=Kommentar
 CompareProductSystemsForMethod=Vergleiche Produktsysteme f\u00FCr Wirkungsmethode {0}
+Complete=Vollständig
 CompleteRefData=Alle Referenzdaten
 Connect=Verbinden...
 Connecting=Verbinde zu
@@ -296,6 +297,7 @@ PleaseEnterNewName=Bitte geben Sie einen neuen Namen ein
 Rename=Umbenennen
 NavigationView_YesAllButton=Ja, alle
 NavigationView_YesButton=Ja
+NextTier=Nächste Ebene
 Never=niemals
 NewCategoryDialogDefault=Neue Kategorie
 NewCategoryDialogText=Bitte geben Sie den Namen der neuen Kategorie ein:
