- Build supply chain/next tier menu redesigned - Fixed remove supply chain action - Refactored build next tier action to use own command instead of chained command -> better support for redo and undo

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -29,6 +29,7 @@ AsDefinedInProcesses=As defined in processes
 Author=Author
 AvoidedProduct=Avoided product
 AvoidedProducts=Avoided products
+BuildNextTier=Build next tier
 Button_No=No
 Button_Yes=Yes
 Calculate=Calculate
@@ -69,6 +70,8 @@ Comment=Comment
 CompareProductSystemsForMethod=Compare product systems for impact method {0}
 Complete=Complete
 CompleteRefData=Complete reference data
+ConnectProviders=Connect providers
+ConnectRecipients=Connect recipients
 Connect=Connect...
 Connecting=Connecting to
 ConsumedBy=Consumed by
@@ -494,6 +497,8 @@ Systems_CalculateButtonText=Calculate results
 Systems_CreatingProductSystem=Creating product system
 Systems_DoubleError=Must be a digit in Double format (e.g. 23.0)\u0009
 Systems_EmptyReferenceProcessError=No reference process selected
+Systems_ExpandAllQuestion_Title=Expand all
+Systems_ExpandAllQuestion_Text=This system contains {0} nodes. Expanding all nodes might take a while. Continue?
 Systems_ExpandAllAction_Text=Expand all
 Systems_ExpansionCommand_ExpandText=expand
 Systems_ExpansionCommand_CollapseText=collapse
