--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -29,6 +29,7 @@ AsDefinedInProcesses=Aus Prozessen \u00FCbernehmen
 Author=Autor
 AvoidedProduct=\u00C4quivalenzprodukt
 AvoidedProducts=\u00C4quivalenzprodukte
+BuildNextTier=Nächste Ebene aufbauen
 Button_No=Nein
 Button_Yes=Ja
 Calculate=Berechnen
@@ -69,6 +70,8 @@ Comment=Kommentar
 CompareProductSystemsForMethod=Vergleiche Produktsysteme f\u00FCr Wirkungsmethode {0}
 Complete=Vollständig
 CompleteRefData=Alle Referenzdaten
+ConnectProviders=Provider verbinden
+ConnectRecipients=Rezipienten verbinden
 Connect=Verbinden...
 Connecting=Verbinde zu
 ConsumedBy=Input in
@@ -491,6 +494,8 @@ Systems_CalculateButtonText=Ergebnisse berechnen
 Systems_CreatingProductSystem=Erstelle Produktsystem
 Systems_DoubleError=muss eine Zahl im Double-Format sein (z.B. 23.0)\u0009
 Systems_EmptyReferenceProcessError=Keinen Referenzprozess ausgew\u00E4hlt
+Systems_ExpandAllQuestion_Title=Alle ausklappen
+Systems_ExpandAllQuestion_Text=Dieses System enthält {0} Knoten. Alle Knoten auszuklappen kann eine Weile dauern. Fortfahren?
 Systems_ExpandAllAction_Text=Alle ausklappen
 Systems_ExpandCollapseCommand_ExpandText=Ausklappen
 Systems_ExpandCollapseCommand_CollapseText=Einklappen
