Added labels for location types

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -254,6 +254,9 @@ LoadingPS=Loading product system
 Location=Location
 LocationInfoSectionLabel=Geography
 Locations=Locations
+LocationTypeGlobal=Global
+LocationTypeProcess=Process specific
+LocationTypeReference=Reference data
 LogNormalDistribution=Logarithmic normal distribution
 Longitude=Longitude
 Map=Map
