--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -251,6 +251,9 @@ LoadingPS=Lade Produktsystem
 Location=Ort
 LocationInfoSectionLabel=Geographie
 Locations=Orte
+LocationTypeGlobal=Global
+LocationTypeProcess=Prozessspezifisch
+LocationTypeReference=Referenzdaten
 LogNormalDistribution=Logarithmische Normalverteilung
 Longitude=Longitude
 Map=Karte
