changed dependencies to Eclipse 4.4

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -1,6 +1,7 @@
 perspective.name = Perspective
-view.name = Navigation
-view.name.0 = Search
+
+Navigation = Navigation
+
 #Label of the administrative information tab in the process editor
 category.name = Administrative information
 category.name.0 = Modelling
@@ -49,8 +50,9 @@ ilcd.net.import.wizard.name = ILCD Network Import
 ilcd.net.import.wizard.description = Import a data set from the ILCD Network into a database.
 ilcd.net.export.category.name = ILCD Network Export
 ilcd.net.export.wizard.name = ILCD Network Export
-ilcd.net.preference.page.name = ILCD Network 2013 GreenDelta. All rights reserved. \nThis program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http://www.openlca.org/uploads/media/MPL-1.1.html \nContributors: GreenDelta - initial API and implementation \n\n www.greendelta.com tel.: +49 30 4849 6030 mail: gdtc@greendelta.com
-navigatorContent.name = Dataprovider
+ilcd.net.preference.page.name = ILCD Network 
+
+navigatorContent.name = Data provider
 commonFilter.name = Empty categories
 commonFilter.name.0 = Product flows
 commonFilter.name.1 = Elementary flows
