--- a/olca-app/OSGI-INF/l10n/bundle_de.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_de.properties
@@ -1,14 +1,16 @@
+perspective.name=Perspektive
+
+Navigation=Navigation
+
 #Tue Jun 07 16:58:43 CEST 2011
 category.name.0=Modellierung
 commonFilter.name=Leere Kategorien
 page.name.4=Speicher
-view.name=Navigation
 page.name.3=Einstellungen f\u00FCr Berechnungsmethoden
 page.name.2=Regionen
 page.name.1=Globale Parameter
 page.name.0=Parametereinstellungen
 property.value=property.value \= Copyright (c) 2007-2014 GreenDelta. All rights reserved. This program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http\://www.openlca.org/uploads/media/MPL-1.1.html Contributors\: GreenDelta - initial API and implementation  www.greendelta.com tel.\: +49 30 4849 6030 mail\: gdtc@greendelta.com
-perspective.name=Perspektive
 commonFilter.name.4=Systemprozesse
 navigatorContent.name=Datenprovider
 page.name=Spracheinstellungen
