added more translations

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -218,7 +218,7 @@ ImpactContributions=Impact contributions
 ImpactFactors=Impact factors
 ImpactMethod=Impact assessment method
 ImpactMethodTitle=Impact method
-ImpactMethodUsed=Impact Method used
+ImpactMethodUsed=Impact method used
 ImpactMethods=Impact assessment methods
 ImpactResultSavedMessage=The result was saved successfully into impact results
 ImpactResultSavedTitle=Impact result saved
@@ -607,3 +607,15 @@ WeightingOf=Weighting of {0}
 WritingIntoFile=Writing into file
 Year=Year
 ZipCode=Zip code
+
+Unknown=Unknown
+CreateNewLCIAMethod = New LCIA method
+CreateNewActor = New actor
+CreateNewFlow = New flow
+CreateNewFlowProperty = New flow property
+CreateNewProcess = New process
+CreateNewProductSystem = New product system
+CreateNewProject = New project
+CreateNewSource = New source
+CreateNewUnitGroup = New unit group
+
