--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,6 +1,6 @@
 AccessAndUseRestrictions=Auflagen zum Zugang und zur Nutzung
 Actor=Kontakt
-Actors=Personen
+Actors=Kontakte
 Actors_WizardMessage=Erstellt einen neuen Kontaktdatensatz
 Actors_WizardTitle=Neuer Kontaktdatensatz
 Add=Hinzuf\u00FCgen
@@ -475,7 +475,7 @@ SingleScore=SingleScore
 SingleScoreChart=Single score chart
 SingleScoreResult=Single score Ergebnis
 SingleScoreTitle=Single score Ergebnis f\u00FCr {0}
-Source=Quelle
+Source=Quellen
 SourceInfoSectionLabel=Zus\u00E4tzliche Informationen
 Sources=Quellen
 SourcesInfoSectionLabel=Quellen
@@ -608,3 +608,13 @@ ZipCode=PLZ
 DatabaseImport=Datenbankimport
 DatabaseImportDescription=Importiert Daten aus einer bestehenden Datenbank in die aktive Datenbank
 Context=Kontext
+Unknown=Unbekannt
+CreateNewLCIAMethod=Neue LCIA-Methode
+CreateNewActor=Neuer Kontakt
+CreateNewFlow=Neuer Fluss
+CreateNewFlowProperty=Neue Flusseigenschaft
+CreateNewProcess=Neuer Prozess
+CreateNewProductSystem=Neues Produktsystem
+CreateNewProject=Neues Projekt
+CreateNewSource=Neue Quellenangabe
+CreateNewUnitGroup=Neue Einheitengruppe
