--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -1,98 +1,41 @@
-perspective.name = Perspective
-
-Navigation = Navigation
-
-#Label of the administrative information tab in the process editor
-category.name = Administrative information
-category.name.0 = Modelling
-category.name.1 = Comparison and evaluation
-page.name = Language settings
-page.name.0 = Parameter settings
-page.name.1 = Global parameters
-page.name.2 = Locations
-page.name.3 = Settings for calculation methods
-page.name.4 = Memory
-property.value = Copyright (c) 2007 -#Properties file for org.openlca.io.ui
-
-# export wizard names and descriptions
-wizard.name = EcoSpold 1
-wizard.description = Import EcoSpold xml files or zip files containing EcoSpold xml files
-wizard.name.0 = Processes
-wizard.description.0 = Export processes to EcoSpold1 xml files
-wizard.name.1 = Impact methods
-wizard.description.1 = Export impact methods to EcoSpold1 xml files
-wizard.name.2 = ILCD
-wizard.description.2 = Import a zip file containing ILCD xml files
-wizard.name.3 = Processes
-wizard.description.3 = Export processes to ILCD xml files
-wizard.name.4 = Flows
-wizard.description.4 = Export flows to ILCD xml files
-wizard.name.5 = Flow properties 
-wizard.description.5 = Export flow properties to ILCD xml files
-wizard.name.6 = Unit groups
-wizard.description.6 = Export unit groups to ILCD xml files
-wizard.name.7 = Product systems
-wizard.description.7 = Export product systems to ILCD xml files
-wizard.name.8 = LCIA methods
-wizard.description.8 = Export LCIA methods to ILCD xml files
-
-# category labels
-category.name = EcoSpold1
-category.name.0 = ILCD
-
-ilcd.import.description = Import ILCD data sets from an ILCD package.
-Actors = Actors
-Sources = Sources
-
-#Properties for org.openlca.ilcd.network
-ilcd.net.import.category.name = ILCD Network Import
-ilcd.net.import.wizard.name = ILCD Network Import
-ilcd.net.import.wizard.description = Import a data set from the ILCD Network into a database.
-ilcd.net.export.category.name = ILCD Network Export
-ilcd.net.export.wizard.name = ILCD Network Export
-ilcd.net.preference.page.name = ILCD Network 
-
-navigatorContent.name = Data provider
-commonFilter.name = Empty categories
-commonFilter.name.0 = Product flows
-commonFilter.name.1 = Elementary flows
-commonFilter.name.2 = Waste flows
-commonFilter.name.3 = Unit processes
-commonFilter.name.4 = System processes
-
-updatecheck.commandlabel = Check for Update
-updatecheck.commandmnemonic = U
-update.preference.page.name = Updates
-
-introTitle = Welcome to openLCA!
-
-usage = Usage
-
-# logger config page
+#Wed Jul 02 13:19:14 CEST 2014
+Navigation=Navigation
+ilcd.net.export.wizard.name=ILCD Network Export
+wizard.name=EcoSpold 1
+commonFilter.name=Empty categories
+Perspective=Perspective
+ilcd.net.import.category.name=ILCD Network Import
+Sources=Sources
+update.preference.page.name=Updates
+introTitle=Welcome to openLCA\!
+ilcd.net.import.wizard.name=ILCD Network Import
+ilcd.net.export.category.name=ILCD Network Export
 logger.config.page.name=Logging
-# number format page
+page.name.1=Global parameters
+wizard.name.8=LCIA methods
+wizard.name.7=Product systems
+wizard.name.6=Unit groups
+wizard.name.5=Flow properties 
+wizard.name.4=Flows
+wizard.name.3=Processes
+wizard.name.2=ILCD
+wizard.name.1=Impact methods
+wizard.name.0=Processes
+commonFilter.name.2=Waste flows
+commonFilter.name.1=Elementary flows
+commonFilter.name.0=Product flows
 number.format.page.name=Number format
-
-#model category labels
-model.category.name = Actors
-model.category.name.0 = Flows
-model.category.name.1 = Flow properties
-model.category.name.2 = Impact methods
-model.category.name.3 = Product systems
-model.category.name.4 = Projects
-model.category.name.5 = Sources
-model.category.name.6 = Unit groups
-model.category.name.7 = Processes
-model.category.name.8 = LCIA results
-
-#editors
-editors.name= Actor editor
-editors.name.0 = Flow editor
-editors.name.1 = Flow property editor
-editors.name.2 = Impact method editor
-editors.name.3 = Product system editor
-editors.name.4 = Project editor
-editors.name.5 = Source editor
-editors.name.6 = Unit group editor
-editors.name.7 = Process editor
-editors.name.8 = LCIA result editor
+usage=Usage
+ilcd.net.preference.page.name=ILCD Network 
+navigatorContent.name=Data provider
+editors.name.7=Process editor
+editors.name.6=Unit group editor
+editors.name.5=Source editor
+editors.name.4=Project editor
+editors.name.3=Product system editor
+Locations=Locations
+editors.name.2=Impact method editor
+editors.name.1=Flow property editor
+editors.name.0=Flow editor
+editors.name=Actor editor
+Actors=Actors
