renamed bundle message keys

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -1,41 +1,38 @@
-#Wed Jul 02 13:19:14 CEST 2014
-Navigation=Navigation
-ilcd.net.export.wizard.name=ILCD Network Export
-wizard.name=EcoSpold 1
-commonFilter.name=Empty categories
-Perspective=Perspective
-ilcd.net.import.category.name=ILCD Network Import
+#Wed Jul 02 13:31:41 CEST 2014
+FlowEditor=Flow editor
+Usage=Usage
+EcoSpold=EcoSpold 1
+ProductFlows=Product flows
+WasteFlows=Waste flows
+UnitGroupEditor=Unit group editor
+Flows=Flows
+ProductSystemEditor=Product system editor
+ProcessEditor=Process editor
+DataProvider=Data provider
+EmptyCategories=Empty categories
+Logging=Logging
+Processes=Processes
+ElementaryFlows=Elementary flows
+ProjectEditor=Project editor
+SourceEditor=Source editor
+ILCDNetworkExport=ILCD Network Export
+WelcomeToOpenLCA=Welcome to openLCA\!
+ILCD=ILCD
+ProductSystems=Product systems
+GlobalParameters=Global parameters
+ILCDNetworkImport=ILCD Network Import
 Sources=Sources
-update.preference.page.name=Updates
-introTitle=Welcome to openLCA\!
-ilcd.net.import.wizard.name=ILCD Network Import
-ilcd.net.export.category.name=ILCD Network Export
-logger.config.page.name=Logging
-page.name.1=Global parameters
-wizard.name.8=LCIA methods
-wizard.name.7=Product systems
-wizard.name.6=Unit groups
-wizard.name.5=Flow properties 
-wizard.name.4=Flows
-wizard.name.3=Processes
-wizard.name.2=ILCD
-wizard.name.1=Impact methods
-wizard.name.0=Processes
-commonFilter.name.2=Waste flows
-commonFilter.name.1=Elementary flows
-commonFilter.name.0=Product flows
-number.format.page.name=Number format
-usage=Usage
-ilcd.net.preference.page.name=ILCD Network 
-navigatorContent.name=Data provider
-editors.name.7=Process editor
-editors.name.6=Unit group editor
-editors.name.5=Source editor
-editors.name.4=Project editor
-editors.name.3=Product system editor
+FlowPropertyEditor=Flow property editor
+Perspective=Perspective
+Navigation=Navigation
+UnitGroups=Unit groups
+NumberFormat=Number format
+ILCDNetwork=ILCD Network 
 Locations=Locations
-editors.name.2=Impact method editor
-editors.name.1=Flow property editor
-editors.name.0=Flow editor
-editors.name=Actor editor
 Actors=Actors
+ImpactMethods=Impact methods
+ImpactMethodEditor=Impact method editor
+ActorEditor=Actor editor
+LCIAMethods=LCIA methods
+Updates=Updates
+FlowProperties=Flow properties 
