--- a/olca-app/OSGI-INF/l10n/bundle_de.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_de.properties
@@ -1,40 +1,37 @@
-#Wed Jul 02 13:19:14 CEST 2014
-Navigation=Navigation
-ilcd.net.export.wizard.name=ILCD Netzwerk-Export
-wizard.name=EcoSpold
-commonFilter.name=Leere Kategorien
-Perspective=Perspektive
-ilcd.net.import.category.name=ILCD Netzwerk-Import
+#Wed Jul 02 13:31:41 CEST 2014
+FlowEditor=Flusseditor
+Usage=Verwendung
+EcoSpold=EcoSpold
+ProductFlows=Produktfl\u00FCsse
+WasteFlows=Abfallfl\u00FCsse
+UnitGroupEditor=Einheitengruppeneditor
+Flows=Fl\u00FCsse
+ProductSystemEditor=Produktsystemeditor
+ProcessEditor=Prozesseditor
+DataProvider=Datenprovider
+EmptyCategories=Leere Kategorien
+Logging=Logging
+Processes=Prozesse
+ElementaryFlows=Elementarfl\u00FCsse
+ProjectEditor=Projekteditor
+SourceEditor=Quelleneditor
+ILCDNetworkExport=ILCD Netzwerk-Export
+WelcomeToOpenLCA=Willkommen\!
+ILCD=ILCD
+ProductSystems=Produktsysteme
+GlobalParameters=Globale Parameter
+ILCDNetworkImport=ILCD Netzwerk-Import
 Sources=Quellen
-update.preference.page.name=Aktualisierungen
-introTitle=Willkommen\!
-ilcd.net.import.wizard.name=ILCD Netzwerk-Import
-ilcd.net.export.category.name=ILCD Netzwerk-Export
-logger.config.page.name=Logging
-page.name.1=Globale Parameter
-wizard.name.8=LCIA Methoden
-wizard.name.7=Produktsysteme
-wizard.name.6=Einheitengruppen
-wizard.name.5=Flusseigenschaften
-wizard.name.4=Fl\u00FCsse
-wizard.name.3=Prozesse
-wizard.name.2=ILCD
-wizard.name.1=Wirkungsmethoden
-wizard.name.0=Prozesse
-commonFilter.name.2=Abfallfl\u00FCsse
-commonFilter.name.1=Elementarfl\u00FCsse
-commonFilter.name.0=Produktfl\u00FCsse
-number.format.page.name=Zahlenformat
-usage=Verwendung
-ilcd.net.preference.page.name=ILCD-Netzwerk
-navigatorContent.name=Datenprovider
-editors.name.7=Prozesseditor
-editors.name.6=Einheitengruppeneditor
-editors.name.5=Quelleneditor
-editors.name.4=Projekteditor
-editors.name.3=Produktsystemeditor
-editors.name.2=Wirkungsmethodeneditor
-editors.name.1=Flusseigenschafteneditor
-editors.name.0=Flusseditor
-editors.name=Personeneditor
+FlowPropertyEditor=Flusseigenschafteneditor
+Perspective=Perspektive
+Navigation=Navigation
+UnitGroups=Einheitengruppen
+NumberFormat=Zahlenformat
+ILCDNetwork=ILCD-Netzwerk
 Actors=Personen
+ImpactMethods=Wirkungsmethoden
+ImpactMethodEditor=Wirkungsmethodeneditor
+ActorEditor=Personeneditor
+LCIAMethods=LCIA Methoden
+Updates=Aktualisierungen
+FlowProperties=Flusseigenschaften
