--- a/olca-app/OSGI-INF/l10n/bundle_zh.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_zh.properties
@@ -1,38 +1,35 @@
-#Wed Jul 02 13:19:14 CEST 2014
-ilcd.net.export.wizard.name=ILCD Network Export
-wizard.name=EcoSpold 1
-commonFilter.name=Empty categories
-ilcd.net.import.category.name=ILCD Network Import
+#Wed Jul 02 13:31:41 CEST 2014
+Updates=Updates
+ProjectEditor=\u8BA1\u5212\u7F16\u8F91
+Usage=Usage
 Sources=Sources
-update.preference.page.name=Updates
-introTitle=Welcome to openLCA\!
-ilcd.net.import.wizard.name=ILCD Network Import
-ilcd.net.export.category.name=ILCD Network Export
-logger.config.page.name=Logging
-page.name.1=Global parameters
-wizard.name.8=LCIA methods
-wizard.name.7=\u4EA7\u54C1 \u7CFB\u7EDF
-wizard.name.6=Unit groups
-wizard.name.5=\u6D41\u52A8 properties 
-wizard.name.4=\u6D41\u52A8
-wizard.name.3=Processes
-wizard.name.2=ILCD
-wizard.name.1=Impact methods
-wizard.name.0=Processes
-commonFilter.name.2=Waste \u6D41\u52A8
-commonFilter.name.1=Elementary \u6D41\u52A8
-commonFilter.name.0=\u4EA7\u54C1 \u6D41\u52A8
-number.format.page.name=Number format
-usage=Usage
-ilcd.net.preference.page.name=ILCD Network 2013 GreenDelta. All rights reserved. \nThis program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http\://www.openlca.org/uploads/media/MPL-1.1.html \nContributors\: GreenDelta - initial API and implementation \n\n www.greendelta.com tel.\: +49 30 4849 6030 mail\: gdtc@greendelta.com
-navigatorContent.name=Dataprovider
-editors.name.7=\u5DE5\u5E8F\u7F16\u8F91
-editors.name.6=\u5355\u4F4D\u7FA4\u7F16\u8F91
-editors.name.5=\u6765\u6E90\u7F16\u8F91
-editors.name.4=\u8BA1\u5212\u7F16\u8F91
-editors.name.3=\u4EA7\u54C1\u7CFB\u7EDF\u7F16\u8F91
-editors.name.2=\u5F71\u54CD\u6CD5\u7F16\u8F91
-editors.name.1=\u6D41\u52A8\u7279\u6027\u7F16\u8F91
-editors.name.0=\u6D41\u52A8\u7F16\u8F91
-editors.name=\u884C\u52A8\u8005\u7F16\u8F91
+ImpactMethodEditor=\u5F71\u54CD\u6CD5\u7F16\u8F91
+WasteFlows=Waste \u6D41\u52A8
+ImpactMethods=Impact methods
+ILCD=ILCD
+ILCDNetworkImport=ILCD Network Import
+ActorEditor=\u884C\u52A8\u8005\u7F16\u8F91
+SourceEditor=\u6765\u6E90\u7F16\u8F91
 Actors=\u884C\u52A8\u8005
+NumberFormat=Number format
+Logging=Logging
+FlowEditor=\u6D41\u52A8\u7F16\u8F91
+UnitGroupEditor=\u5355\u4F4D\u7FA4\u7F16\u8F91
+ProductSystemEditor=\u4EA7\u54C1\u7CFB\u7EDF\u7F16\u8F91
+WelcomeToOpenLCA=Welcome to openLCA\!
+GlobalParameters=Global parameters
+ILCDNetworkExport=ILCD Network Export
+EcoSpold=EcoSpold 1
+DataProvider=Dataprovider
+ILCDNetwork=ILCD Network 2013 GreenDelta. All rights reserved. \nThis program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http\://www.openlca.org/uploads/media/MPL-1.1.html \nContributors\: GreenDelta - initial API and implementation \n\n www.greendelta.com tel.\: +49 30 4849 6030 mail\: gdtc@greendelta.com
+EmptyCategories=Empty categories
+ProductFlows=\u4EA7\u54C1 \u6D41\u52A8
+Flows=\u6D41\u52A8
+ProcessEditor=\u5DE5\u5E8F\u7F16\u8F91
+ElementaryFlows=Elementary \u6D41\u52A8
+LCIAMethods=LCIA methods
+FlowProperties=\u6D41\u52A8 properties 
+Processes=Processes
+FlowPropertyEditor=\u6D41\u52A8\u7279\u6027\u7F16\u8F91
+ProductSystems=\u4EA7\u54C1 \u7CFB\u7EDF
+UnitGroups=Unit groups
