--- a/olca-app/OSGI-INF/l10n/bundle_zh.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_zh.properties
@@ -16,12 +16,11 @@ Logging=Logging
 FlowEditor=\u6D41\u52A8\u7F16\u8F91
 UnitGroupEditor=\u5355\u4F4D\u7FA4\u7F16\u8F91
 ProductSystemEditor=\u4EA7\u54C1\u7CFB\u7EDF\u7F16\u8F91
-WelcomeToOpenLCA=Welcome to openLCA\!
 GlobalParameters=Global parameters
 ILCDNetworkExport=ILCD Network Export
 EcoSpold=EcoSpold 1
 DataProvider=Dataprovider
-ILCDNetwork=ILCD Network 2013 GreenDelta. All rights reserved. \nThis program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http\://www.openlca.org/uploads/media/MPL-1.1.html \nContributors\: GreenDelta - initial API and implementation \n\n www.greendelta.com tel.\: +49 30 4849 6030 mail\: gdtc@greendelta.com
+ILCDNetwork=ILCD Network 
 EmptyCategories=Empty categories
 ProductFlows=\u4EA7\u54C1 \u6D41\u52A8
 Flows=\u6D41\u52A8
