renamed message keys (part 2)

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -227,8 +227,8 @@ NormalDistribution=Normal distribution
 Normalization=Normalization
 NormalizationAndWeightingSet=Normalization and weighting set
 NormalizationFactor=Normalization factor
-NormalizationWeighting=Normalization/Weighting
-NormalizationWeightingSets=Normalization/Weighting sets
+NormalizationWeighting=Normalization and weighting
+NormalizationWeightingSets=Normalization and weighting sets
 NormalizationweightingSet=Normalization/weighting set
 Note=Note
 NumberFormatPage_Description=Set the number of decimal places for the display of numbers.
