--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Thu Jul 03 07:54:38 CEST 2014
+#Thu Jul 03 12:17:42 CEST 2014
 AccessAndUseRestrictions=Access and use restrictions
 Actor=Actor
 Actors=Actors
@@ -21,6 +21,7 @@ Author=Author
 AvoidedProduct=Avoided product
 AvoidedProductFlow=Avoided product flow
 AvoidedWasteFlow=Avoided waste flow
+Browse=Browse
 BuildNextTier=Build next tier
 BuildSupplyChain=Build supply chain
 CASNumber=CAS number
@@ -46,6 +47,7 @@ ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
 ConnectWithSystemProcessesIfPossible=Connect with system processes if possible
 ConsumedBy=Consumed by
+Content=Content
 Context=Context
 Contribution=Contribution
 ConversionFactor=Conversion factor
@@ -131,6 +133,7 @@ FlowPropertyType=Flow property type
 FlowType=Flow type
 Flows=Flows
 Formula=Formula
+FormulaEvaluationFailed=Formula evaluation of failed
 FoundProblems=Found problems\:
 FromDirectory=From directory\:
 FunctionalUnit=Functional unit
@@ -148,6 +151,7 @@ Grouping=Grouping
 Groups=Groups
 Help=&Help
 Hide=Hide
+Host=Host
 Hourly=Hourly
 ImpactAssessmentMethod=Impact assessment method
 ImpactAssessmentMethods=Impact assessment methods
@@ -165,6 +169,7 @@ InfrastructureProcess=Infrastructure process
 Inputs=Inputs
 InputsOutputs=Inputs/Outputs
 IntendedApplication=Intended application
+IsNotAValidNumber=is not a valid number
 IsReference=Is reference
 LCIMethod=LCI method
 Language=Language
@@ -271,6 +276,7 @@ ReferenceProcess=Reference process
 ReferenceUnit=Reference unit
 ReferenceUnitIsEmptyOrInvalid=Reference unit is empty or invalid
 Reload=Reload
+RemoteDatabase=Remote database
 Remove=Remove
 RemoveConnections=Remove connections
 RemoveObject=Remove object
@@ -297,11 +303,13 @@ SaveChanges=Save changes
 SaveChangesQuestion=Do you want to save the changes?
 SavingDiagramAsImageIn=Saving diagram as image in {0}
 Search=Search
+SearchParameters=Search parameters
 SearchProvidersFor=Search providers for
 SearchRecipientsFor=Search recipients for
 Searching=Searching...
 SearchingForUnits=Searching for units...
 Select=Select {0}
+SelectADirectory=Select a directory
 SelectAUserInterfaceLanguage=Select a user interface language
 SelectImportFiles=Select import files
 SelectLanguageNoteMessage=Changes will not take affect until openLCA is restarted
@@ -332,6 +340,8 @@ TargetAmount=Target amount
 Technology=Technology
 Telefax=Telefax
 Telephone=Telephone
+Test=Test
+TestDistribution=Test distribution
 TextDropComponent_ToolTipText=Drag a selected object from \nthe navigation view into the \ntext field or click to open a \ndialog.
 TextReference=Text reference
 Time=Time
@@ -340,6 +350,7 @@ ToDirectory=To directory\:
 TotalAmount=Total amount
 Tree=tree
 TriangleDistribution=Triangle distribution
+Type=Type
 Uncertainty=Uncertainty
 UncertaintyDistribution=Uncertainty distribution
 UniformDistribution=Uniform distribution
