--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Thu Jul 03 12:17:42 CEST 2014
+#Thu Jul 03 13:00:51 CEST 2014
 AccessAndUseRestrictions=Access and use restrictions
 Actor=Actor
 Actors=Actors
@@ -37,6 +37,7 @@ Causal=Causal
 CheckForUpdates=Check for updates
 ChooseDirectory=Choose directory...
 City=City
+ClickHereToChangeDisplay=Click here to change the display
 Code=Code
 Collapse=collapse
 CollapseAll=Collapse all
@@ -90,6 +91,7 @@ DatabaseContent=Database content
 DatabaseImport=Database import
 DatabaseImportDescription=Imports data from an existing database into the active database
 DatabaseName=Database name
+DatabaseType=Database type
 DefaultFlowProperty=Default flow property
 DefaultMethod=Default method
 DefaultProvider=Default provider
@@ -132,6 +134,7 @@ FlowProperty=Flow property
 FlowPropertyType=Flow property type
 FlowType=Flow type
 Flows=Flows
+Folder=Folder
 Formula=Formula
 FormulaEvaluationFailed=Formula evaluation of failed
 FoundProblems=Found problems\:
@@ -178,6 +181,8 @@ LastModificationDate=Last modification date
 Latitude=Latitude
 Layout=Layout
 LayoutAs=Layout as {0}
+Local=Local
+LocalDatabase=Local database
 Location=Location
 Locations=Locations
 LogNormalDistribution=Logarithmic normal distribution
@@ -246,12 +251,17 @@ Outputs=Outputs
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 Parameter=Parameter
 Parameters=Parameters
+Password=Password
 Paste=Paste
 PedigreeUncertainty=Pedigree uncertainty
 Physical=Physical
 PleaseEnterAName=Please enter a name
 PleaseEnterANewName=Please enter a new name
 PleaseEnterTheNameOfTheNewCategory=Please enter the name of the new category\:
+PleaseSpecifyHost=Please specify a host
+PleaseSpecifyPortNumber=Please specify a port number
+PleaseSpecifyUser=Please specify a user
+Port=Port
 Prefer=Prefer\: {0}
 Process=Process
 ProcessContributions=Process contributions
@@ -276,6 +286,7 @@ ReferenceProcess=Reference process
 ReferenceUnit=Reference unit
 ReferenceUnitIsEmptyOrInvalid=Reference unit is empty or invalid
 Reload=Reload
+Remote=Remote
 RemoteDatabase=Remote database
 Remove=Remove
 RemoveConnections=Remove connections
@@ -336,6 +347,7 @@ StartDate=Start date
 SubCategory=Sub-category
 Synonyms=Synonyms
 SystemProcess=System process
+SystemSaveProceedQuestion=In order to perform the requested task the product system must be saved. Do you want to proceed?
 TargetAmount=Target amount
 Technology=Technology
 Telefax=Telefax
@@ -365,9 +377,11 @@ UnitsAndFlowProperties=Units and flow properties
 Unknown=Unknown
 Unmark=Unmark
 UpdatePreferences=Update preferences
+UpdatingProductSystem=Updating product system
 Usage=Usage
 UsageOf=Usage of
 UsedInProcesses=Used in processes
+User=User
 UserFriendlyName=User friendly name
 Value=Value
 Version=Version
@@ -378,6 +392,7 @@ Weekly=Weekly
 Weighting=Weighting
 WeightingFactor=Weighting factor
 Window=&Window
+WithPassword=With password
 Year=Year
 Yes=Yes
 ZipCode=Zip code
