--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Thu Jul 03 13:00:51 CEST 2014
+#Thu Jul 03 13:38:29 CEST 2014
 AccessAndUseRestrictions=Access and use restrictions
 Actor=Actor
 Actors=Actors
@@ -34,6 +34,7 @@ CalculationType=Calculation type
 CalculationWizardDescription=Please select the properties for the calculation
 Category=Category
 Causal=Causal
+Change=Change
 CheckForUpdates=Check for updates
 ChooseDirectory=Choose directory...
 City=City
@@ -47,6 +48,7 @@ Connect=Connect
 ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
 ConnectWithSystemProcessesIfPossible=Connect with system processes if possible
+Connection=Connection
 ConsumedBy=Consumed by
 Content=Content
 Context=Context
@@ -157,6 +159,14 @@ Help=&Help
 Hide=Hide
 Host=Host
 Hourly=Hourly
+ILCD_AUTHENTICATION_FAILED_MSG=Authentication failed. Please check your user name and password.
+ILCD_CONNECTION_FAILED_MSG=Connection failed. Please check your network connection, URL, and user data.
+ILCD_CONNECTION_WORKS_MSG="Connection works."
+ILCD_NO_READ_OR_WRITE_ACCESS_MSG=You do not have read or write access
+ILCD_NetworkImport=Network Import
+ILCD_RunImport=Run Import
+ILCD_SearchFailedMessage=Network search failed\: 
+ILCD_SearchPageDescription=Search and select processes for the import
 ImpactAssessmentMethod=Impact assessment method
 ImpactAssessmentMethods=Impact assessment methods
 ImpactCategories=Impact categories
@@ -370,6 +380,7 @@ TotalAmount=Total amount
 Tree=tree
 TriangleDistribution=Triangle distribution
 Type=Type
+URL=URL
 Uncertainty=Uncertainty
 UncertaintyDistribution=Uncertainty distribution
 UniformDistribution=Uniform distribution
@@ -405,18 +416,3 @@ WithPassword=With password
 Year=Year
 Yes=Yes
 ZipCode=Zip code
-
-URL = URL
-Connection = Connection
-Change = Change
-ILCD_SearchErrorMessage=Cannot run search
-ILCD_SearchFailedMessage=Network search failed: 
-ILCD_SearchPageDescription=Search and select processes for the import
-ILCD_NetworkImport=Network Import
-ILCD_NetworkSearch=Network Search
-ILCD_RunImport=Run Import
-ILCD_NetworkExport=ILCD Network Export
-ILCD_CONNECTION_FAILED_MSG=Connection failed. Please check your network connection, URL, and user data.
-ILCD_AUTHENTICATION_FAILED_MSG=Authentication failed. Please check your user name and password.
-ILCD_NO_READ_OR_WRITE_ACCESS_MSG=You do not have read or write access
-ILCD_CONNECTION_WORKS_MSG="Connection works."
