--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Thu Jul 03 07:54:39 CEST 2014
+#Thu Jul 03 13:38:29 CEST 2014
 AccessAndUseRestrictions=Auflagen zum Zugang und zur Nutzung
 Actor=Kontakt
 Actors=Kontakte
@@ -33,6 +33,7 @@ CalculationType=Berechnungstyp
 CalculationWizardDescription=Bitte w\u00E4hlen Sie die Berechnungseigenschaften aus
 Category=Kategorie
 Causal=Kausal
+Change=\u00C4ndern
 CheckForUpdates=Suche nach Aktualisierungen f\u00FCr openLCA
 ChooseDirectory=Verzeichnis ausw\u00E4hlen...
 City=Stadt
@@ -44,6 +45,7 @@ Connect=Verbinde
 ConnectProviders=Provider verbinden
 ConnectRecipients=Rezipienten verbinden
 ConnectWithSystemProcessesIfPossible=Verbinde mit Systemprozessen, wenn m\u00F6glich
+Connection=Verbindung
 ConsumedBy=Input in
 Context=Kontext
 Contribution=Beitrag
@@ -146,6 +148,14 @@ Groups=Gruppen
 Help=&Hilfe
 Hide=Verstecken
 Hourly=st\u00FCndlich
+ILCD_AUTHENTICATION_FAILED_MSG=Die Authentifizierung ist fehlgeschlagen. Bitte pr\u00FCfen Sie Nutzername und Passwort.
+ILCD_CONNECTION_FAILED_MSG=Es konnte keine Verbindung hergestellt werden. Bitte pr\u00FCfen Sie Ihre Internetverbindung, die Netzwerkadresse und Ihre Nutzerdaten.
+ILCD_CONNECTION_WORKS_MSG=Eine Verbindung wurde erfolgreich hergestellt.
+ILCD_NO_READ_OR_WRITE_ACCESS_MSG=Sie haben keine Lese- oder Schreibrechte auf dem Server.
+ILCD_NetworkImport=ILCD Netzwerk-Import
+ILCD_RunImport=Importiere
+ILCD_SearchFailedMessage=Die Suche im Netzwerk scheiterte\: 
+ILCD_SearchPageDescription=Suchen Sie nach Prozessen und w\u00E4hlen Sie diese f\u00FCr den Import aus
 ImpactAssessmentMethod=Wirkungsmethode
 ImpactAssessmentMethods=Wirkungsmethoden
 ImpactCategories=Wirkungskategorien
@@ -337,6 +347,7 @@ ToDirectory=In Verzeichnis\:
 TotalAmount=Gesamtbeitrag
 Tree=Baum
 TriangleDistribution=Dreiecksverteilung
+URL=URL
 Uncertainty=Unsicherheit
 UncertaintyDistribution=Unsicherheitsverteilung
 UniformDistribution=Gleichverteilung
@@ -367,19 +378,3 @@ Window=&Fenster
 Year=Jahr
 Yes=Ja
 ZipCode=PLZ
-
-URL = URL
-Connection = Verbindung
-Change = Ändern
-ILCD_NetworkImport=ILCD Netzwerk-Import
-ILCD_SearchErrorMessage=Fehler beim Suchen
-ILCD_SearchFailedMessage=Die Suche im Netzwerk scheiterte: 
-ILCD_SearchPageDescription=Suchen Sie nach Prozessen und wählen Sie diese für den Import aus
-ILCD_NetworkSearch=Netzwerksuche
-ILCD_RunImport=Importiere
-ILCD_NetworkExport=ILCD Netzwerk-Export
-ILCD_CONNECTION_FAILED_MSG=Es konnte keine Verbindung hergestellt werden. Bitte prüfen Sie Ihre Internetverbindung, \
-die Netzwerkadresse und Ihre Nutzerdaten.
-ILCD_AUTHENTICATION_FAILED_MSG=Die Authentifizierung ist fehlgeschlagen. Bitte prüfen Sie Nutzername und Passwort.
-ILCD_NO_READ_OR_WRITE_ACCESS_MSG=Sie haben keine Lese- oder Schreibrechte auf dem Server.
-ILCD_CONNECTION_WORKS_MSG=Eine Verbindung wurde erfolgreich hergestellt.
